welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SlugSnail:17: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return true
      ^SlugSnail:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SlugSnail:19: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return false
      ^SlugSnail:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SlugSnail:22: warning: enclosing method isFacingTrail has result type Unit: return value discarded
  return false
  ^SlugSnail:27: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
  if (isFacingTrail==true) {
      ^SlugSnail:31: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
  } else if (isFacingTrail==false) {
             ^