welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
    do {
    check
  } while (estSurBiscuit==false)
  prendBiscuit
}

def isFacingTrail(c:Color) {
  var couleur=Color.red
  if (estFaceMur()==false) {
    avance;
    getCouleurSol;
    couleur=getCouleurSol
    recule;
    if (c==couleur) {
      return true
    } else {
      return false
    }
  }
  return false
}


def check {
  if (isFacingTrail==true) {
    baisseBrosse;
    avance;
    leveBrosse;    
  } else if (isFacingTrail==false) {
      gauche;
  }
}